Added API documentation for Inventary Items
