# app/Http/Controllers/InventoryItemController.php
@@ -12,9 +12,55 @@ use Illuminate\Database\Eloquent\Collection;
 use Illuminate\Http\JsonResponse;
 use Illuminate\Support\Facades\DB;
 
+/**
+ * @OA\Tag(
+ *     name="Inventory Items"
+ * )
+ */
 class InventoryItemController extends BaseController
 {
     /**
+     * @OA\Get(
+     *     path="/api/inventory-items/all",
+     *     summary="Display a listing of the items",
+     *     tags={"Inventory Items"},
+     *     @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *          @OA\JsonContent(
+     *              type="object",
+     *              description="Details of the item",
+     *              @OA\Property(
+     *                  property="id",
+     *                  type="integer",
+     *                  description="ID of the item"
+     *              ),
+     *              @OA\Property(
+     *                  property="name",
+     *                  type="string",
+     *                  description="Name of the item"
+     *              ),
+     *              @OA\Property(
+     *                  property="points",
+     *                  type="integer",
+     *                  description="Poinst of the item"
+     *              )
+     *          )
+     *      ),
+     *     @OA\Response(
+     *         response=500,
+     *         description="Internal server error",
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(
+     *                 property="message",
+     *                 type="string",
+     *                 description="Error message indicating internal server error"
+     *             )
+     *         )
+     *     )
+     * )
+     *
      * Display a listing of the items.
      *
      * @return Collection
